--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ isort==4.3.21
 lazy-object-proxy==1.4.3
 mccabe==0.6.1
 Pillow==7.1.1
+psycopg2-binary==2.8.5
 pycodestyle==2.5.0
 pylint==2.4.4
 python-decouple==3.3
