--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,26 @@
 asgiref==3.2.7
 astroid==2.3.3
 autopep8==1.5.1
+boto3==1.12.42
+botocore==1.15.42
 dj-database-url==0.5.0
 Django==3.0.5
+django-storages==1.9.1
+docutils==0.15.2
 gunicorn==20.0.4
 isort==4.3.21
+jmespath==0.9.5
 lazy-object-proxy==1.4.3
 mccabe==0.6.1
 Pillow==7.1.1
 psycopg2-binary==2.8.5
 pycodestyle==2.5.0
 pylint==2.4.4
+python-dateutil==2.8.1
 python-decouple==3.3
 pytz==2019.3
+s3transfer==0.3.3
 six==1.14.0
 sqlparse==0.3.1
-whitenoise==5.0.1
+urllib3==1.25.9
 wrapt==1.11.2
